# shiftrss

./: Cargo.toml  Makefile
src/: lib.rs  main.rs  web.rs
tests/data/: bitemyapp_atom.xml  bitemyapp_rss.xml
